syntax = "proto3";

//option java_multiple_files = true;
option java_package = "com.quancheng.test.model";
option java_outer_classname = "User";


package com.quancheng.test.model;

import "zeus/base.proto";

// 创建用户请求
message UserCreateRequest {

    // 用户名称
    string name = 1;

    // 用户手机号
    string phone = 2;

}

message UserCreateResponse {

    com.quancheng.zeus.model.BaseResponse base = 1;

    // 用户标识
    int64 id = 2;
}

message UserGetRequest {

    // 用户标识
    int64 id = 1;
}

message UserGetResponse {
    com.quancheng.zeus.model.BaseResponse base = 4;

    // 用户标识
    int64 id = 1;

    // 用户名称
    string name = 2;

    // 用户手机号
    string phone = 3;
}

message UserSetRequest {
    // 用户标识
    int64 id = 1;

    // 用户手机号
    string phone = 2;
}

message UserDeleteRequest {
    // 用户标识
    int64 id = 1;
}
