syntax = "proto3";

//option java_multiple_files = true;
option java_package = "com.quancheng.test.service";
option java_outer_classname = "UserServiceProto";


package com.quancheng.test.service;

import "example/user.proto";
import "zeus/base.proto";

service UserService {

    rpc create(com.quancheng.test.model.UserCreateRequest) returns (com.quancheng.test.model.UserCreateResponse) {
    }

    rpc get (com.quancheng.test.model.UserGetRequest) returns (com.quancheng.test.model.UserGetResponse) {
    }

    rpc set(com.quancheng.test.model.UserSetRequest) returns (com.quancheng.zeus.model.BaseResponse) {
    }

    rpc delete(com.quancheng.test.model.UserDeleteRequest) returns (com.quancheng.zeus.model.BaseResponse) {
    }

}
